--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,37 @@
 .mylk-banner{
-	width: 300px;
-	height: 200px;
+	width: 200px;
+	height: 180px;
 	position: relative;
-	background: #FF8C70;
-
-
+	background: #FFFFFF;
 }
 
-.text h1{
+.mylk-banner {
+  text-align: center;
+  margin: 24px;
+  font-family: 'Chewy', cursive;
+  font-size: 40px;
+}
+
+.text {
+  margin-top: 24px;
+  margin-bottom: 30px;
+  margin-left: 5px;
+  margin-right: 5px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
 	text-align: center;
 	font-family: Gill Sans / Gill Sans MT, sans-serif !important;
-
 }
 
 .button-donate {
     background: #FF4F24; /* this is an orange */
     color: #FFFFFF;
-  	font-size: 20px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
   	background: #FF4F24;
-  	padding: 10px 20px 10px 20px;
-  	text-decoration: none;
-  	display: block;
-  	position: relative;
-
-    width: 50%;
-    margin: 0 auto;
+    display:flex;
+    justify-content:center;
+    align-items:center;
 }
 
 .button-donate:hover {
