--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 .mylk-banner{
 	width: 200px;
-	height: 180px;
+	height: 240px;
 	position: relative;
 	background: #FFFFFF;
 }
@@ -32,6 +32,7 @@
     display:flex;
     justify-content:center;
     align-items:center;
+    margin-top: 20px;
 }
 
 .button-donate:hover {
